@@ -4,9 +4,9 @@
 <h1>Help LilyPond development</h1>
 
 Help LilyPond development by donating money, or buying new features.
+The suggested amount for a donation is $ 15 or EUR 15.
 <p>
 
-<em>Yes, I realize that there is no PayPal button here yet.
-Please come back later, and don't spend your money on something else :-)
-
-</em>
+You can send your donation via <a
+href=http://www.paypal.com>PayPal</a>. Send your donation to
+<tt>hanwen@xs4all.nl</tt>.
